@@ -3,6 +3,4 @@
 if [ "$PATH_POWERMAND" = "" ]; then
     PATH_POWERMAND=../src/powermand
 fi
-#$PATH_POWERMAND -f -c test4.conf -s -R
-#$PATH_POWERMAND -f -c mcr.conf -s -R
-$PATH_POWERMAND -f -c gpib.conf -s -R
+$PATH_POWERMAND -f -c test4.conf -s -R
