@@ -1,3 +1,7 @@
+2008-07-03 Jim Garlick <garlick@llnl.gov>
+
+	* etc/ilom.dev, test/ilom.c, test/t44 : Added reset support.
+
 2008-07-02 Jim Garlick <garlick@llnl.gov>
 
 	* etc/ilom-inline.dev : Removed.
